# open-design-text-renderer

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  README.md
cmake/modules/: FindHarfbuzz.cmake
docs/: README.md  baseline_policy.md  overflow_policy.md
docs/img/: baseline_policies.xd
include/open-design-text-renderer/: PlacedDecoration.h  PlacedGlyph.h  PlacedTextData.h  text-renderer-api.h
include/textify/: PlacedDecoration.h  PlacedGlyph.h  PlacedTextData.h  textify-api-new.h  textify-api.h
src/: main.cpp  tests.cpp  textify-api-new.cpp  textify-api.cpp
src/API/: PlacedDecoration.cpp  PlacedGlyph.cpp  PlacedTextData.cpp  text-renderer-api.cpp  textify-api-new.cpp  textify-api.cpp
src/api/: PlacedTextData.cpp  text-renderer-api.cpp
src/cli/: Canvas.cpp  Canvas.h  SimpleRenderer.cpp  SimpleRenderer.h  octopus-utils.cpp  octopus-utils.h
src/common/: buffer_view.cpp  buffer_view.h  hash_utils.hpp  lexical_cast.hpp  result.hpp  sorted_vector.hpp
src/compat/: Bitmap.hpp  affine-transform.cpp  affine-transform.h  arithmetics.cpp  arithmetics.hpp  basic-types.cpp  basic-types.h  bitmap-ops.cpp  bitmap-ops.hpp  pixel-conversion.cpp  pixel-conversion.h  png.cpp  png.h
src/fonts/: FaceTable.cpp  FaceTable.h  FontCodec.cpp  FontCodec.h  FontManager.cpp  FontManager.h  FontStorage.cpp  FontStorage.h
src/otf/: Features.cpp  Features.h  Storage.hpp  StorageBufferImpl.cpp  StorageBufferImpl.h  StorageFileImpl.cpp  StorageFileImpl.h  otf.cpp  otf.h
src/text-renderer/: BitmapWriter.cpp  BitmapWriter.h  Config.cpp  Config.h  Context.cpp  Context.h  Face.cpp  Face.h  FormattedParagraph.cpp  FormattedText.cpp  FormattedText.h  FreetypeHandle.cpp  FreetypeHandle.h  Glyph.cpp  Glyph.h  GlyphAcquisitor.cpp  GlyphAcquisitor.h  LineBreaker.cpp  LineBreaker.h  LineSpan.cpp  LineSpan.h  ParagraphShape.cpp  ParagraphShape.h  PlacedTextRendering.cpp  PlacedTextRendering.h  TextParser.cpp  TextShape.cpp  TextShape.h  TextShapeData.cpp  TextShapeInput.cpp  TextShapeInput.h  TypesetJournal.cpp  TypesetJournal.h  VisualRun.cpp  VisualRun.h  base-types.h  base.h  reported-fonts-utils.h  tabstops.h  text-format.h  (+2 more)
src/textify/: BitmapDraw.cpp  BitmapDraw.h  BitmapWriter.cpp  BitmapWriter.h  BmpWriter.cpp  BmpWriter.h  Config.cpp  Config.h  Context.cpp  Context.h  Face.cpp  Face.h  FormattedParagraph.cpp  FormattedParagraph.h  FormattedText.cpp  FormattedText.h  FreetypeHandle.cpp  FreetypeHandle.h  Glyph.cpp  Glyph.h  GlyphAcquisitor.cpp  GlyphAcquisitor.h  GlyphShape.cpp  GlyphShape.h  LineBreaker.cpp  LineBreaker.h  LineSpan.cpp  LineSpan.h  ParagraphShape.cpp  ParagraphShape.h  PlacedTextData.cpp  PlacedTextData.h  PlacedTextRendering.cpp  PlacedTextRendering.h  TextParser.cpp  TextParser.h  TextShape.cpp  TextShape.h  TextShapeData.cpp  TextShapeData.h  (+14 more)
src/unicode/: Block.cpp  Block.h  EmojiTable-full.gen.cpp  EmojiTable-simple.cpp  EmojiTable.cpp  EmojiTable.h  generate_emoji_table.py  unicode.h
src/utils/: Log.h  bitmap-ops.h  fmt.h  utils.cpp  utils.h
test/: CMakeLists.txt  xcode-build.sh
test/src/: TextRendererApiTests.cpp  TextRendererApiTests.h  TextifyApiTests.cpp  main.cpp
test/test-files/: Decorations.json  SingleLetter.json
